src/test/deca/context/invalid/SansObjet/DeclVar-Mod-string-float-boolean.deca
// Description:
//    Declaration of a string variable using % operation between a float variable and boolean .
// 
// Results:
//     Contextual error
//     Line 14: (RULE 3.33) Illegal operand type.
// 
// Historique: 
//    cree le 11/01/2022 

{
    float x =  0.1; 
    boolean y = true; 
    string z = x % y ; 
}
